RESOLVED FIXED57706
[Qt] Radio buttons are showing wrong with mobile theme
https://bugs.webkit.org/show_bug.cgi?id=57706
Summary [Qt] Radio buttons are showing wrong with mobile theme
Diego Gonzalez
Reported 2011-04-02 10:43:09 PDT
Radio buttons are shown wrong in case painting in a wide area like in: http://www.amw.com/missing_persons/search.cfm
Attachments
Screenshot showing the bug (65.86 KB, image/png)
2011-04-02 10:49 PDT, Diego Gonzalez
no flags
Screenshot after patch (79.46 KB, image/png)
2011-04-02 10:50 PDT, Diego Gonzalez
no flags
Patch (1.91 KB, patch)
2011-04-02 10:51 PDT, Diego Gonzalez
no flags
Diego Gonzalez
Comment 1 2011-04-02 10:49:21 PDT
Created attachment 87977 [details] Screenshot showing the bug
Diego Gonzalez
Comment 2 2011-04-02 10:50:02 PDT
Created attachment 87978 [details] Screenshot after patch
Diego Gonzalez
Comment 3 2011-04-02 10:51:19 PDT
Antonio Gomes
Comment 4 2011-04-03 19:34:11 PDT
Comment on attachment 87979 [details] Patch side =! size?
Eric Seidel (no email)
Comment 5 2011-04-03 22:56:44 PDT
Comment on attachment 87979 [details] Patch How do we test this?
Antonio Gomes
Comment 6 2011-04-03 23:00:16 PDT
(In reply to comment #5) > (From update of attachment 87979 [details]) > How do we test this? it is not tested, afaik.
Csaba Osztrogonác
Comment 7 2011-04-03 23:32:43 PDT
Comment on attachment 87979 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=87979&action=review AFAIK we can test it, only if QT_MOBILE_THEME is true, but it isn't set by default. Please fix the typo and the variable name before landing, otherwise LGTM, r=me. > Source/WebCore/platform/qt/QtMobileWebStyle.cpp:92 > + // get minor size to do not paint a wide elipse > + qreal side = qMin(size.width(), size.height()); // ... ellipse ... radioButtonSize would be better name > Source/WebCore/platform/qt/QtMobileWebStyle.cpp:94 > + QRect rect = QRect(QPoint(1, 1), QSize(side - 2, side - 2)); ditto
WebKit Review Bot
Comment 8 2011-04-06 07:34:11 PDT
http://trac.webkit.org/changeset/83043 might have broken GTK Linux 64-bit Debug
Diego Gonzalez
Comment 9 2011-04-06 08:42:06 PDT
(In reply to comment #8) > http://trac.webkit.org/changeset/83043 might have broken GTK Linux 64-bit Debug I was not related with this patch
Diego Gonzalez
Comment 10 2011-04-06 08:42:53 PDT
Fixed at r83043
Note You need to log in before you can comment on or make changes to this bug.