2011-04-02  Diego Gonzalez  <diegohcg@webkit.org>

[Qt] Radio buttons are showing wrong with mobile theme
    https://bugs.webkit.org/show_bug.cgi?id=57706

    Reviewed by Csaba Osztrogonác.

    * platform/qt/QtMobileWebStyle.cpp:
    (QtMobileWebStyle::drawRadio):

Canonical link: https://commits.webkit.org/72823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83043 268f45cc-cd09-0410-ab3c-d52691b4dbfc